# amd_kernel_playground

./: LICENSE  README.md
hip_code/device_query/: CMakeLists.txt  README.md
hip_code/device_query/src/: main.cpp
hip_code/ex_1/: main  main.c  makefile
hip_code/ex_2/: a.out  main.c
hip_code/ex_3/: main  main.c
hip_code/ex_4/: main  main.c
hip_code/hello_world/: README.md  kernel_build.sh  main.hip
hip_code/hello_world/src/: main.cpp
kernel_code/amd-mi355x-comp/: docker_startup.sh  reference_kernel_benchmark.py  rocm_container.sh
